
- #11819: make the `native_compiler` and `native_dynlink` configuration
  variables available through ocamlc -config.
  (Sébastien Hinderer, review by Gabriel Scherer and David Allsopp)

- #11235, #11864: usage warnings for constructors and fields can now be disabled
  on field-by-field or constructor-by-constructor basis
  (Florian Angeletti, review by Gabriel Scherer)

### Internal/compiler-libs changes:

- #11847, #11849, #11851: small refactorings in the type checker
  (Gabriel Scherer, review by Nicolás Ojeda Bär)

- #11027: Separate typing counter-examples from type_pat into retype_pat;
  type_pat is no longer in CPS.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #11018, #11869: Clean up Types.Variance, adding a description of
  the lattice used, and defining explicitly composition.
  (Jacques Garrigue, review by Gabriel Scherer and Jeremy Yallop)

- #11286, #11515: disambiguate identifiers by using how recently they have
  been bound in the current environment
  (Florian Angeletti, review by Gabriel Scherer)

- #11364: Allow `make -C testsuite promote` to take `TEST` and `LIST` variables
  (Antal Spector-Zabusky, review by Gabriel Scherer and David Allsopp)

- #11446: document switch compilation (lambda/switch.ml)
  (Gabriel Scherer, review by Luc Maranget and Vincent Laviron)

- #11601, #11612, #11628: Clean up some global state handling
  in emitcode, bytepackager, spill.
  (Hugo Heuzard, Stefan Muenzel, review by Vincent Laviron, Gabriel Scherer
   and Nathanaëlle Courant)

- #11627: use return values instead of globals for linear scan intervals
  (Stefan Muenzel, review by Nicolás Ojeda Bär)

- #11634: Dll.open_dll now properly handle opening for execution while already
  opened for checking
  (Hugo Heuzard, review by Nicolás Ojeda Bär)

- #11569: Remove hash type encoding
  (Hyunggyu Jang, review by Gabriel Scherer and Florian Angeletti)

- #11568: Encode inline record types in Path.t