@@ -24,6 +24,7 @@ let main argv ppf =
   Clflags.add_arguments __LOC__
     ["-depend", Arg.Unit Makedepend.main_from_option,
      "<options> Compute dependencies (use 'ocamlc -depend -help' for details)"];
+  let exception Continue in
   match
     Compenv.readenv ppf Before_args;
     Compenv.parse_arguments (ref argv) Compenv.anonymous program;
@@ -44,6 +45,8 @@ let main argv ppf =
         exit 2
       end
     end;
+    if Clflags.(should_stop_after Compiler_pass.Lambda)
+      then raise Continue;
     Compenv.readenv ppf Before_link;
     if
       List.length
@@ -56,7 +59,7 @@ let main argv ppf =
       | None ->
           Compenv.fatal
             "Please specify at most one of -pack, -a, -c, -output-obj";
-      | Some ((P.Parsing | P.Typing) as p) ->
+      | Some ((P.Parsing | P.Typing | P.Lambda) as p) ->
         assert (P.is_compilation_pass p);
         Printf.ksprintf Compenv.fatal
           "Options -i and -stop-after (%s) \
@@ -106,10 +109,11 @@ let main argv ppf =
   with
   | exception (Compenv.Exit_with_status n) ->
     n
-  | exception x ->
-    Location.report_exception ppf x;
-    2
+  | exception Continue
   | () ->
     Compmisc.with_ppf_dump ~file_prefix:"profile"
       (fun ppf -> Profile.print ppf !Clflags.profile_columns);
     0
+  | exception x ->
+  Location.report_exception ppf x;
+  2
