@@ -1,1 +1,1 @@
-wrong argument 'scheduling'; option '-stop-after' expects one of: parsing typing.
+wrong argument 'scheduling'; option '-stop-after' expects one of: parsing typing lambda.
